Fix page length being too long

--- a/404.scss
+++ b/404.scss
@@ -5,7 +5,8 @@
 // {% include header-full.scss %}
 
 main {
-  padding: 0px 25px; 
+  padding: 0px 25px;
+  padding-top: 1px;
 }
 
 h1 {
