--- a/_includes/base.scss
+++ b/_includes/base.scss
@@ -30,7 +30,9 @@ body {
   margin: 0px;
   background-color: #f4f6fa;
   font-family: "Source Sans";
+  position: relative;
 }
 main {
   margin: 0px;
+  padding-top:1px;
 }
