--- a/_includes/header-full.scss
+++ b/_includes/header-full.scss
@@ -7,7 +7,7 @@
 }
 
 main {
-  min-height: calc(100vh - 170px);
+  min-height: calc(100vh - 171px);
 }
 header {
   position: relative;
@@ -34,10 +34,10 @@ header {
     pointer-events: none;
     cursor: pointer;
     fill: white;
+    width: 35px;
+    right: 15px;
     @media (max-width: 730px) {
       opacity: 1;
-      width: 35px;
-      right: 15px;
       top: 50%;
       transform: translateY(-50%);
       pointer-events: all;
